@@ -21,12 +21,11 @@ override_dh_auto_configure:
 	dh_auto_configure -- $(CURDIR) IDE_LIBRARY_BASENAME=lib/$(DEB_HOST_MULTIARCH) IDE_PACKAGE_MODE=1 USE_SYSTEM_BOTAN=1 $(extra_configure_opts)
 
 override_dh_auto_install:
-	dh_auto_install -Smakefile -- INSTALL_ROOT=$(CURDIR)/debian/tmp/usr
 ifneq (,$(filter qtcreator-doc, $(shell dh_listpackages)))
-	$(MAKE) docs
-	install -D -p -m0644 share/doc/qtcreator/qtcreator.qch \
-		debian/tmp/usr/share/qtcreator/doc/qtcreator.qch
+	dh_auto_build -- qch_docs
 endif
+	dh_auto_install --destdir=debian/tmp/usr
+	dh_auto_build -- install_docs INSTALL_ROOT=$(CURDIR)/debian/tmp/usr
 
 override_dh_auto_clean:
 	dh_auto_clean
